# rockin-networked-devices

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
conveyor_belt/: CMakeLists.txt  README.md
conveyor_belt/apps/: connection_status.cpp  simple_function_test.cpp  stop_belt.cpp  zmq_client_function_test.cpp  zmq_gui_client.cpp  zmq_server.cpp
conveyor_belt/config/: 80-conveyor-belt.rules
conveyor_belt/include/: conveyor_belt_gui.h  conveyor_belt_kf_d44.h  conveyor_belt_server.h  ui_conveyor_belt_gui.h
conveyor_belt/msgs/: conveyor_belt.proto  conveyor_belt_command.proto  conveyor_belt_status.proto
conveyor_belt/qt/: conveyor_belt_gui.moc  conveyor_belt_gui.ui
conveyor_belt/scripts/: zmq_server.sh
conveyor_belt/src/: conveyor_belt_gui.cpp  conveyor_belt_kf_d44.cpp  conveyor_belt_server.cpp
drilling_machine/: CMakeLists.txt  README.md
drilling_machine/apps/: connection_status.cpp  zmq_client_function_test.cpp  zmq_server.cpp
drilling_machine/cmake/modules/: FindOODL_YouBot.cmake
drilling_machine/cmake_modules/: FindWiringpi.cmake
drilling_machine/cmake_modules/modules/: FindWiringpi.cmake
drilling_machine/config/: 80-drilling-machine.rules  drilling_machine_motor.cfg  youbot-ethercat.cfg
drilling_machine/include/: drilling_machine.h  drilling_machine_server.h
drilling_machine/msgs/: DrillingMachine.proto
drilling_machine/scripts/: zmq_server.sh
drilling_machine/src/: drilling_machine.cpp  drilling_machine_server.cpp
quality_control_camera/: CMakeLists.txt  README.md
quality_control_camera/apps/: connection_status.cpp  zmq_client_function_test.cpp  zmq_server.cpp
quality_control_camera/config/: 80-quality-control-camera.rules
quality_control_camera/include/: camera.h  quality_control_camera_server.h
quality_control_camera/msgs/: CameraImage.proto  Image.proto
quality_control_camera/scripts/: zmq_server.sh
quality_control_camera/src/: camera.cpp  quality_control_camera_server.cpp
